--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC|Pacifico&display=swap');
+
 * {
+  font-family: 'Amatic SC', cursive;
   margin: 10px;
+}
+
+h1 {
+	font-family: 'Pacifico', cursive;
 }
 
 div {
